CHANGES IN VERSION 1.3.1
------------------------
 o Reporting total number of peptides in dbUniquePeptideSet.
   Fixes issue #41. <2013-05-13 Mon>

CHANGES IN VERSION 1.3.0
------------------------
 o Bioc 2.13 devel version bump

CHANGES IN VERSION 1.2.0
------------------------
 o Bioc 2.12 stable version bump

CHANGES IN VERSION 1.1.5
------------------------
 o updated references <2013-03-22 Fri>

CHANGES IN VERSION 1.1.4
------------------------
 o added citation <2013-03-21 Thu>
 o vignette uses knitr engine and scrartcl class <2013-03-21 Thu>

CHANGES IN VERSION 1.1.3
------------------------
 o knitr 1.0 compatibility, based on Dan's 
   updates <2013-01-15 Tue>

CHANGES IN VERSION 1.1.2
------------------------
 o added note about tcl BWidget package in synapterGUI man <2012-10-04 Thu>

CHANGES IN VERSION 1.1.1
------------------------
 o fixing vignette <2012-10-02 Tue>

CHANGES IN VERSION 1.1.0
------------------------
 o new devel version bump <2012-10-01 Mon>

CHANGES IN VERSION 0.99.15
--------------------------
 o updated ref in package man (2) <2012-09-14 Fri>
 o updated Synapter show method to display short 
   log <2012-09-14 Fri>

CHANGES IN VERSION 0.99.14
--------------------------
 o updated ref in package man <2012-09-11 Tue>

CHANGES IN VERSION 0.99.13
--------------------------
 o bumping version number to take all previous changes 
   into account <2012-08-29 Wed>

CHANGES IN VERSION 0.99.12
--------------------------
 o fixed build problem on windows <2012-08-27 Mon>
 o updated refs in vignette <2012-08-28 Tue>

CHANGES IN VERSION 0.99.11
--------------------------
 o using dev='pdf' in vignette and removing 
   tikzDevice (not on CRAN anymore) from 
   Suggests<2012-08-16 Thu>

CHANGES IN VERSION 0.99.10
--------------------------
 o added tikzDevice suggestion for vignette <2012-08-15 Wed>

CHANGES IN VERSION 0.99.9
-------------------------
 o using knitr instead of pgfSweave <2012-08-13 Mon>